fix spacing

--- a/src/Pages/Dashboard/components/Home/styles.module.scss
+++ b/src/Pages/Dashboard/components/Home/styles.module.scss
@@ -16,7 +16,7 @@ p {
 .home--welcome-container {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 35px;
   width: 100%;
 }
 .home--greetings-container {
@@ -97,7 +97,7 @@ p {
 // Notifications container start
 .home--recent-notifications-main-container {
   display: flex;
-  margin-top: 40px;
+  margin-top: 55px;
   max-width: 100%;
   //   background-color: black;
   //   align-items: center;
